--- a/styles.css
+++ b/styles.css
@@ -69,24 +69,6 @@ body {
     margin-bottom: 10px; /* Add bottom margin to create space between list items */
     counter-increment: tip-counter; /* Increment the counter for each list item */
 }
-/* Add this to your CSS to style the slider */
-.slider-container {
-    max-width: 800px; /* Adjust the maximum width of the slider container */
-    margin: 0 auto; /* Center the slider container */
-    overflow: hidden; /* Hide overflowing content */
-}
-
-.slider {
-    display: flex; /* Display slides in a row */
-    transition: transform 0.5s ease-in-out; /* Smooth transition effect */
-}
-
-.slide {
-    min-width: 100%; /* Each slide takes the full width of the container */
-}
-
-
-
 
 .section-heading{
         text-align: center;
@@ -95,6 +77,68 @@ body {
         text-align: center;
     }
     
+    * {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
     
     /* Fonts */
     
