--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ body {
     .section-text{
         text-align: center;
     }
-    
+
     * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
@@ -85,8 +85,8 @@ img {vertical-align: middle;}
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
-  position: relative;
   margin: auto;
+  text-align: center;
 }
 
 /* Caption text */
@@ -114,7 +114,7 @@ img {vertical-align: middle;}
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: #0a0a0a;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -127,7 +127,7 @@ img {vertical-align: middle;}
 /* Fading animation */
 .fade {
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 5s;
 }
 
 @keyframes fade {
