--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
+.logo-container{
+    display: flex;
+    align-items: center;
+}
+.logo{
+    margin-right: 10px;
+}
 .main-heading{
     margin: 0;
+}
+nav a {
+    margin-right: 45px; /* Adjust the margin as needed to control the space between links */
 }
 .instructor-container {
     display: flex;
@@ -10,6 +20,9 @@
 
 .text-center{
     text-align: center !important;
+    margin-top: -28px;
+    margin-bottom: 20px;
+    
 }
 .round-button {
     display: inline-block;
@@ -49,6 +62,7 @@ body {
     padding-left: 0; /* Remove default padding for the ordered list */
     list-style-position: inside; /* Position the list markers inside the list items */
     counter-reset: tip-counter; /* Reset the counter for numbered list */
+    
 }
 
 .numbered-tips-list li {
@@ -72,7 +86,8 @@ img {vertical-align: middle;}
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
-  margin: auto;
+  margin:auto;
+  margin-top: 20px;
   text-align: center;
 }
 
